# object

./: .gitignore  CMakeLists.txt  README.md  cobject.h  object.hpp
.github/workflows/: build.yml
test/: CMakeLists.txt  object.hpp  test.cpp
